Mon 22 Apr 2013 14:36:53 BST - Release 1.10
 Use YAML rather than JSON in basic tests

Fri 19 Apr 2013 13:34:38 BST - Release 1.09
 Don't load Data::Serializer unnecessarily in tests

Tue 16 Apr 2013 08:33:00 BST - Release 1.08
 Factor Data::Serializable into it's own dist to stop breakages.

   If you use any of:

   * Data::Dumper
   * Data::Denter
   * Data::Taxi
   * Config::General
   * PHP::Serialization

   You'll need to install Catalyst-Action-Serialize-Data-Serializer and add the
   appropriate lines to your controller config.  Said lines may be:

         'text/x-data-dumper' => [ 'Data::Serializer', 'Data::Dumper' ],
         'text/x-data-denter' => [ 'Data::Serializer', 'Data::Denter' ],
         'text/x-data-taxi'   => [ 'Data::Serializer', 'Data::Taxi'   ],
         'text/x-config-general'    => [ 'Data::Serializer', 'Config::General' ],
         'text/x-php-serialization' => [ 'Data::Serializer', 'PHP::Serialization' ],

Thu 11 Apr 2013 20:20:00 BST - Release 1.07
 Don't serialize if a view is explicitly set.

   If the controller sets the view in $c->stash->{current_view} or
   $c->stash->{current_view_instance}, then it is explicitly requesting a
   certain kind of serialization and C::A::Serialize shouldn't override
   that.

 Remove Storable and FreezeThaw from the list
 of serialization methods offered by default, and
 from the docs - they're totally unsafe :/

Tue 11 Dec 2012 22:04:00 GMT - Release 1.06
 Sort list of allowed methods. RT#81825

Mon  2 Jul 2012 20:13:00 BST - Release 1.05
 Bugfix get_allowed_methods list:
  * include HEAD
  * remove "not_implemented"

Sat  30 Jun 2012 10:25:00 BST - Release 1.04
 Bugfix to _dispatch_rest_method

Wed  28 Jun 2012 00:40:00 BST - Release 1.03
 Expose _get_allowed_methods to the API (wreis)

 Fix default OPTIONS handler: As the ->body is defined, then serialization
 won't happen and we don't get wrong responses. (wreis)

 Add default HEAD handler: auto dispatches to _GET method if it exists (wreis)
